--- a/css/src/components/_work-list.scss
+++ b/css/src/components/_work-list.scss
@@ -66,11 +66,13 @@
       font-size: 5rem;
       font-family: $font-heading;
       font-weight: $fw-regular;
+      text-align: center;
     }
     &-subtitle {
       margin: 0;
       font-size: 3rem;
       font-weight: $fw-regular;
+      text-align: center;
     }
   }
 
